--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 1;
 }
 
 @media only screen and (max-width: 900px) {
