--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   padding: 2rem;
   display: flex;
   justify-content: center;
+  margin: 0;
 }
 
 .logo {
@@ -57,5 +58,22 @@
 @media only screen and (max-width: 900px) {
   .container_app {
     width: 40em;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .container_app {
+    width: 40em;
+    padding: 0;
+    border: none;
+    border-radius: 0;
+
+  }
+
+  #root {
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
   }
 }
