--- a/src/components/current-weather/current-weather.css
+++ b/src/components/current-weather/current-weather.css
@@ -51,6 +51,7 @@
     padding: 1em;
     border-radius: 1em;
     box-shadow: 1px 0.5px 0 2px black;
+    width: 6em;
 }
 
 .detail-content {
@@ -63,7 +64,6 @@
 .detail-content-value {
     font-family: "Wittgenstein", serif;
     font-weight: bold;
-    margin: 0.5em;
 
 }
 
@@ -85,6 +85,8 @@
         flex-direction: column;
         align-items: center;
         margin: 1em 0;
+        border-radius: 0;
+
         /* Adjust margin for spacing between detail boxes */
     }
 }
