--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -13,7 +13,7 @@ body {
 /* Navbar styles */
 .navBar {
     margin: 0;
-    padding: 1em;
+    padding: 0.5em;
     display: flex;
     align-items: center;
     width: 50em;
@@ -44,6 +44,7 @@ body {
     border-color: hsl(0, 0%, 70%);
     width: 25em;
     text-align: center;
+    margin-left: -1em;
 }
 
 h2 {
