--- a/src/components/forecast/forecast.css
+++ b/src/components/forecast/forecast.css
@@ -17,6 +17,12 @@
     padding: 5px 20px;
 }
 
+.daily-item:hover {
+    height: 50px;
+    font-size: 16px;
+    background-color: #e3dbdb;
+}
+
 .icon-small {
     width: 40px;
     display: block;
