--- a/src/components/current-weather/current-weather.css
+++ b/src/components/current-weather/current-weather.css
@@ -21,6 +21,7 @@
     padding: 5px 10px;
     border: 1px black solid;
     box-shadow: 1px 0.5px 0 2px black;
+    transition: 0.5s ease-in-out;
 }
 
 .weather-description {
@@ -55,6 +56,7 @@
 .parameter-label:hover,
 .parameter-value:hover {
     font-weight: 900;
+    transition: 0.5s;
 }
 
 .detail {
@@ -82,6 +84,7 @@
     height: 3.5em;
     font-size: 1em;
     font-weight: 900;
+    transition: 0.5s;
 }
 
 .detail-box-group {
