--- a/src/components/forecast/forecast.css
+++ b/src/components/forecast/forecast.css
@@ -15,12 +15,14 @@
     display: flex;
     font-size: 14px;
     padding: 5px 20px;
+
 }
 
 .daily-item:hover {
     height: 50px;
     font-size: 16px;
     background-color: #e3dbdb;
+    transition: 0.5s;
 }
 
 .icon-small {
